--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
 
     //To use pager composable. For tickets in the HomeScreen
     implementation "com.google.accompanist:accompanist-pager:0.28.0"
